<resources>
    <string name="app_name">ScientificCatNameGenerator</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="question_6">Question 6</string>
    <string name="question_7">Question 7</string>
    <string name="question_8">Question 8</string>
    <string name="question_9">Question 9</string>
    <string name="question_10">Question 10</string>
    <string name="question_11">Question 11</string>
    <string name="question_12">Question 12</string>
    <string name="question_13">Question 13</string>
    <string name="question_14">Question 14</string>
    <string name="question_15">Question 15</string>

    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="back_button">Back</string>
    <string name="generator_button">Start Generating!</string>
    <string name="history_button">Previously Liked Names</string>

    <string name="pg1_answer1">answer1</string>
    <string name="pg1_answer2">answer2</string>
    <string name="pg1_answer3">answer3</string>
    <string name="pg1_answer4">answer4</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_question_">Question_Activity</string>

    <string name="app_title">Scientific Cat Name Generator</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">History</string>
    <string name="generate_button">Generate</string>
    <string name="generated_name_phrase">Generated Name:</string>

</resources>
