<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:background="@drawable/catbackground_focus">

    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:textColor="#ffa3ff10"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp">

        <Button
            android:id="@+id/generate_button"
            android:text="@string/generator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff0d00"/>

        </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/history_button"
            android:text="@string/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff0d00"/>

    </LinearLayout>

</LinearLayout>
